# haskell-testing-stubbing-io

./: README.md  erin-hello.cabal  test.sh
app/: Main.hs
free-monad/: erin-hello.cabal
free-monad/src/: Application.hs
free-monad/test/: ApplicationSpec.hs
operational-monad/: run.sh
operational-monad/src/: Application.hs
operational-monad/test/: ApplicationSpec.hs
src/: Hello.hs
test/: HelloSpec.hs
type-class/: LICENSE  erin-hello.cabal
type-class/app/: Main.hs
type-class/src/: Application.hs  Configuration.hs  Greeting.hs  Hello.hs  Report.hs  TheOutsideWorld.hs
type-class/test/: ApplicationSpec.hs  ConfigurationSpec.hs  GreetingSpec.hs  HelloSpec.hs  ReportSpec.hs
