name:                erin-hello
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            http://github.com/githubuser/erin-hello#readme
license:             BSD3
license-file:        LICENSE
author:              Erin Swenson-Healey
maintainer:          eswenson-healey@cj.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Application
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , free
                     , timeit
  default-language:    Haskell2010

executable erin-hello
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , erin-hello
  default-language:    Haskell2010

test-suite erin-hello-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , erin-hello
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/erin-hello
